Finished Assignment: added buttons under searchbar, fixed footer, corrected logo spacing.

--- a/Style/style.css
+++ b/Style/style.css
@@ -32,7 +32,7 @@ IMG.logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: 1em;
     border-radius: 60px;
     width: 27em;
     height: 42px;
@@ -98,14 +98,34 @@ header {
 }
 
 footer {
+    position: fixed;
     display: block;
-    margin-top: 260px;
+    margin-top: 220px;
     width: 100%;
     height: 40px;
     background-color: rgb(233, 233, 233);
     padding-top: 15px;
     border-top: 1px solid rgb(194, 194, 194);
     font-size: 13px;
+    font-weight: bold;
 }
 
+button {
+    cursor: pointer;
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 10px;
+    background-color: rgb(245, 245, 245);
+    border: 1px solid white;
+    color: gray;
+    border-radius: 5px;
+    
+}
 
+#containerb {
+    text-align: center; 
+}
+
+.gs {
+    margin-right: 20px;
+}
